--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "15.3.2",
+    "clsx": "^1.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
